@@ -1,5 +1,6 @@
 2005-02-06  Ross Golder  <ross@golder.org>
 
-	* archive.pl: Fixed bugs in 'start-time' and 'end-time' options.
+	* archive.pl: Now checks second and third Received header if it
+	fails to parse the first. Added '--debug'.
 	* archive.pl: Added 'start-time' and 'end-time' options.
 
